2023-05-18 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m: [interpretString: forField: forObject:]
	new method that parses a string in a local format respeting the type
	of the object describe and output it again in SF format.

2023-05-18 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.m:
	Fix and correctly parse and output SF yyyy-MM-dd'T'HH:mm:ss.000'Z'
	format

2023-05-18 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m:
	In case of nil value insert empty string.

2023-05-18 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
	* DBSFTypeWrappers.m:
	Add stringValueSF method, to return value in expected SF format, differing from stringValue which may be type and locale dependent. for DateTime add parsing of yyyy-MM-DD hh:mm format with timezone and DST interpertation.

2021-09-24 Riccardo Mottola <rm@gnu.org>

	* DBCSVReader.m:
	Better check for separators and treat exceptions of unqualified emtpy
	fields even in a qualified file.

	* DBSoapCSV.m:
	Insert a check if the number of values is less than the fields
	(probable misparsing).

2021-04-21 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.m:
	Now that GNUstep supports getting a BOM for an empty string, simplify
	the code which dind't even work. Also, take in account of the BOM
	length and skip it when writing.

2021-04-17 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	Add getter for the DBSoap interface.

2021-04-17 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Allow to set and use runAssignmentRules, init to NO.

2021-02-18 Riccardo Mottola <rm@gnu.org>

	* DBSoap+Selecting.m: _query
	Actually invoke correct query or queryAll method.

2020-08-28 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	* DBSoap.h
	Remove http support, no longer supported by salesforce.com

2020-05-29 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	split extractQueryRecord from extractQueryRecords and start extracting all sub-objects into DBSObjects, not just the top-level.
